# agentops-oss

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
collector/: Dockerfile  requirements.txt
collector/app/: __init__.py  main.py  models.py  security.py  storage.py
examples/: basic_agent.py  langchain_agent.py
sdk/python/: README.md  pyproject.toml
sdk/python/agentops/: __init__.py  decorators.py  exporters.py  integrations.py  models.py  tracer.py
sdk/python/tests/: __init__.py  test_sdk.py
ui/: Dockerfile  app.py  requirements.txt
