[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentops-sdk"
version = "0.1.0"
description = "Open-source observability SDK for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "AgentOps Team", email = "team@agentops.dev" }
]
keywords = [
    "ai",
    "agents",
    "observability",
    "tracing",
    "llm",
    "langchain",
    "openai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

dependencies = []

[project.optional-dependencies]
http = ["httpx>=0.24.0"]
langchain = ["langchain-core>=0.1.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
all = [
    "httpx>=0.24.0",
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/agentops-oss"
Documentation = "https://docs.agentops.dev"
Repository = "https://github.com/yourorg/agentops-oss"
Issues = "https://github.com/yourorg/agentops-oss/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentops"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
